<resources>
    <string name="app_name">BusBar</string>
    <string name="navigation_home">主界面</string>
    <string name="navigation_main">主路</string>
    <string name="navigation_branch">支路</string>
    <string name="navigation_settings">设置</string>

    <string name="bar_menu_home">主界面</string>
    <string name="bar_menu_main">主路</string>
    <string name="bar_menu_branch">支路</string>
    <string name="bar_menu_box">接插箱</string>
    <string name="bar_menu_settings">设置</string>

    <string name="login_dlg">登 陆</string>
    <string name="login_btn">登 陆</string>
    <string name="login_OK">登陆成功</string>
    <string name="login_err">登陆失败</string>
    <string name="login_quited">已退出登陆</string>
    <string name="login_dev_ip">IP地址：</string>
    <string name="login_dev_num">级联号</string>
    <string name="login_name">账  号：</string>
    <string name="login_pwd">密  码：</string>
    <string name="login_remember">记住账号/密码</string>
    <string name="login_select">设备选择</string>
    <string name="login_login">连接</string>
    <string name="login_disconnect">断开</string>
    <string name="login_back">返回</string>
    <string name="login_quit">退出</string>
    <string name="login_wait">请等待</string>
    <string name="login_connecting">正在链接</string>
    <string name="login_ip_err">IP地址错误</string>
    <string name="login_ip_null">IP地址为空</string>
    <string name="login_name_null">用户名为空</string>
    <string name="login_pwd_null">密码为空</string>
    <string name="login_please">请登陆</string>
    <string name="login_coned">已登陆</string>

    <string name="line_rate">频率: </string>
    <string name="line_thd">谐波分析 </string>
    <string name="line_total_cur">总电流: </string>
    <string name="line_total_vol">平均电压: </string>
    <string name="line_total_pow">总功率: </string>

    <string name="line_name">相位</string>
    <string name="line_status">状态</string>
    <string name="line_vol">相电压</string>
    <string name="line_cur">相电流</string>
    <string name="line_pl">负载率</string>
    <string name="line_vol_thd">电压谐波</string>
    <string name="line_cur_thd">电流谐波</string>
    <string name="line_pow">有功功率</string>
    <string name="line_pf">功率因素</string>
    <string name="line_ele">电能</string>
    <string name="line_tem">温度: </string>

    <string name="branch_id">编号</string>
    <string name="branch_name">名称</string>
    <string name="branch_status">状态</string>
    <string name="branch_status_normal">正常</string>
    <string name="branch_status_abnormal">异常</string>
    <string name="branch_cur_A">A电流</string>
    <string name="branch_ele_A">A电能</string>
    <string name="branch_cur_B">B电流</string>
    <string name="branch_ele_B">B电能</string>
    <string name="branch_cur_C">C电流</string>
    <string name="branch_ele_C">C电能</string>

    <string name="box_total_vol">总电压： </string>
    <string name="box_total_cur">总电流： </string>
    <string name="box_total_pow">有功功率：</string>
    <string name="box_total_appow">视在功率： </string>
    <string name="box_total_pf">功率因素：</string>
    <string name="box_total_ele">总电能： </string>
    <string name="box_name">名称</string>
    <string name="box_sw">开关</string>
    <string name="box_vol">电压</string>
    <string name="box_cur">电流</string>
    <string name="box_pw">有功功率</string>
    <string name="box_appow">视在功率</string>
    <string name="box_pf">功率因素</string>
    <string name="box_ele">电能</string>
    <string name="box_tem">温度</string>
    <string name="box_title">接插箱: </string>
    <string name="box_offline_info">此接插箱没在线，无法查看相关信息！！！</string>
    <string name="box_sw_on">接通</string>
    <string name="box_sw_off">断开</string>

    <string name="set_dlg">参数设置</string>
    <string name="set_menu_pwd">请输入系统密码确认权限</string>
    <string name="set_pwd_sure">确定</string>
    <string name="set_menu_line">主路设置</string>
    <string name="set_menu_branch">支路设置</string>
    <string name="set_menu_tem">温度设置</string>
    <string name="set_pwd_isempty">请输入密码，密码不能为空！！！</string>
    <string name="set_pwd_err">密码错误，请重新输入密码！！！</string>
    <string name="set_no_login">请先登陆！！！</string>

    <string name="set_bus_save"> 保存 </string>
    <string name="set_bus_name">母线名称： </string>
    <string name="set_bus_name_empty">名称不能为空， 请重新输入！！</string>
    <string name="set_bus_cur">额定电流： </string>
    <string name="set_bus_cur_err">额定电流输入错误， 请重新输入！！</string>
    <string name="set_box_num"> 插接箱数量: </string>
    <string name="set_bux_num_err">插接箱数量输入错误， 请重新输入！！</string>
    <string name="set_bus_save_ok">保存成功！！！</string>
    <string name="set_box_activity_tile">接插箱信息设置</string>
    <string name="set_tem_activity_tile">温度信息设置</string>
    <string name="set_line_activity_tile">主路信息设置</string>
    <string name="set_line_header_id">编号</string>
    <string name="set_line_header_phase">相位</string>
    <string name="set_line_header_type">类型</string>
    <string name="set_line_header_value">当前值</string>
    <string name="set_line_header_set">设置</string>
    <string name="set_line_cur">电流</string>
    <string name="set_line_vol">电压</string>

    <string name="set_header_id">编号</string>
    <string name="set_header_name">名称</string>
    <string name="set_header_tem1">温度1</string>
    <string name="set_header_tem2">温度2</string>
    <string name="set_header_tem3">温度3</string>

    <string name="set_com_max">最大值: </string>
    <string name="set_com_min">最小值: </string>
    <string name="set_com_crmax">上限值: </string>
    <string name="set_com_crmin">下限值: </string>
    <string name="set_com_unified">统一设置</string>
    <string name="set_com_save">保存</string>
    <string name="set_com_cancel">取消</string>
    <string name="set_ret_max">最大值太大，请重新输入!!!!</string>
    <string name="set_ret_min">最小值大于最大值，请重新输入!!!</string>
    <string name="set_ret_crmin">临界下限值小于最小值，请重新输入!!!</string>
    <string name="set_ret_crmax">临界上限值大于最大值，请重新输入!!!</string>
    <string name="set_ret_crminmax">临界下限值大于临界上限值，请重新输入!!!</string>
    <string name="set_save_ok">数据保存成功!!!</string>
    <string name="set_save_err">数据保存失败!!!</string>


</resources>
