<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/list_view_head"
            android:text="@string/box_name"/>

        <TextView
            style="@style/list_view_head"
            android:text="@string/box_sw"/>

        <TextView
            style="@style/list_view_head"
            android:text="@string/box_vol"/>

        <TextView
            style="@style/list_view_head"
            android:text="@string/box_cur"/>

        <TextView
            style="@style/list_view_head"
            android:text="@string/box_pw"/>
        <TextView
            style="@style/list_view_head"
            android:text="@string/box_appow"/>

        <TextView
            style="@style/list_view_head"
            android:text="@string/box_pf"/>

        <TextView
            style="@style/list_view_head"
            android:text="@string/box_ele"/>

        <TextView
            style="@style/list_view_head"
            android:text="@string/box_tem"/>
    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="3px"
        android:background="@color/bar_div_white" />

</LinearLayout>