<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        style="@style/list_view_head"
        android:text="@string/line_name"/>

    <TextView
        style="@style/list_view_head"
        android:text="@string/line_status"/>

    <TextView
        style="@style/list_view_head"
        android:text="@string/line_vol"/>

    <TextView
        style="@style/list_view_head"
        android:text="@string/line_cur"/>

    <TextView
        style="@style/list_view_head"
        android:text="@string/line_max_cur"/>

    <TextView
        style="@style/list_view_head"
        android:text="@string/line_pow"/>

    <TextView
        style="@style/list_view_head"
        android:text="@string/line_appow"/>

    <TextView
        style="@style/list_view_head"
        android:text="@string/line_pf"/>

    <TextView
        style="@style/list_view_head"
        android:text="@string/line_ele"/>
    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/bar_div_white" />

</LinearLayout>