<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="380dp"
    android:background="@drawable/dlg_bg"
    tools:context="com.clever.www.busbar.setting.SetCheckPwdActivity">


    <TextView
        style="@style/dlg_title_text"
        android:text="@string/set_dlg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_menu_pwd"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_menu_pwd"
        android:text="admin"
        android:ems="10" />

    <Button
        android:id="@+id/line_Btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/set_menu_line"/>

    <Button
        android:id="@+id/branch_Btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/set_menu_branch"/>

    <Button
        android:id="@+id/tem_Btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/set_menu_tem"/>
    </LinearLayout>

</LinearLayout>
