<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:textColor="@color/bg_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/login_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/login_dev_ip"/>

        <EditText
            android:id="@+id/ip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="number"
            android:digits="0123456789."
            android:text="192.168.1.163"/>

        <Spinner
            android:id="@+id/devNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/login_select"
            android:entries="@array/dev_num_list">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/login_name"/>

        <EditText
            android:id="@+id/usr"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/login_pwd"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/pwd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="80dp"
            android:gravity="right"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:textColor="@color/bg_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/login_remember"
            android:id="@+id/checkBox" />
    </LinearLayout>


    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/login_login"
            android:id="@+id/longin" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/login_disconnect"
            android:id="@+id/disconnect" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/login_back"
            android:id="@+id/quit" />
    </LinearLayout>




</LinearLayout>