<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/set_bus_name"/>

        <EditText
            android:id="@+id/bus_name_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="idc bus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="20sp"
            android:text="@string/set_bus_cur"/>

        <EditText
            android:id="@+id/bus_cur_et"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:ems="10"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="A"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="20sp"
            android:text="@string/set_box_num"/>

        <EditText
            android:id="@+id/bus_num_et"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/saveBtn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/set_bus_save"/>
    </LinearLayout>

</LinearLayout>